2007-08-01  Thomas Wood  <thos@gnome.org>

	Path by: Dennis Cranston <dennis_cranston@yahoo.com>

	* data/appearance.glade:  Add a few more mnemonics.  HIG capitalization 
	  fix for a checkbutton label.

2007-07-31  Jens Granseuer  <jensgr@gmx.net>

	* appearance-desktop.c: (wp_file_open_dialog), (desktop_init):
	* appearance.h: add a shortcut to the user's special Pictures folder to
	the file chooser and default to it (bug #461093), and reduce casting

2007-07-30  Jens Granseuer  <jensgr@gmx.net>

	* appearance-style.c: (color_button_clicked_cb): fix cut'n'paste errors
	for the tooltip colors and use new color enum

	* data/appearance.glade: repair the mess glade3 made of the file

2007-07-30  Thomas Wood  <thos@gnome.org>

	* appearance-style.c: (color_button_clicked_cb): Add missing '\n'.

2007-07-30  Jens Granseuer  <jensgr@gmx.net>

	* appearance-themes.c: (themes_init):
	* data/appearance.glade: use our custom cell renderer for metathemes,
	too, so the previews don't get shaded (bug #461198)

2007-07-30  Thomas Wood  <thos@gnome.org>

	* appearance-style.c: (update_color_buttons_from_string),
	(check_color_schemes_enabled), (color_button_clicked_cb),
	(style_init):
	* data/appearance.glade:

	Add tooltip foreground and background colours to the list of recognised
	symbolic colours.


2007-07-29  Jens Granseuer  <jensgr@gmx.net>

	* appearance-main.c: (main): default to showing the background tab
	if wallpapers were given on the command line

2007-07-29  Jens Granseuer  <jensgr@gmx.net>

	* data/gnome-appearance-properties.desktop.in.in: add %F to the exec
	line so external programs like epiphany can set the background (bug
	#456337)

2007-07-29  Jens Granseuer  <jensgr@gmx.net>

	* data/appearance.glade:
	* appearance-themes.c: (theme_custom_cb):
	* theme-save.c: (save_dialog_response): only create the custom theme
	entry when changes are made, and delete it when the theme is saved.
	These changes obsolete the requirement for a modal details window.
