@@ -1,3 +1,7 @@
+2007-08-03  Jens Granseuer  <jensgr@gmx.net>
+
+	* appearance-style.c: (color_button_clicked_cb): simplify
+
 2007-08-01  Thomas Wood  <thos@gnome.org>
 
 	Path by: Dennis Cranston <dennis_cranston@yahoo.com>
